--- a/index.html
+++ b/index.html
@@ -50,9 +50,6 @@
           <li><a href="#normative">Normativa</a></li>
           <li><a href="#normative">Inscripcions</a></li>
           <li><a href="#normative">Colaboracions</a></li>
-          <!-- <li><a href="#normative">Normativa</a></li>
-          <li><a href="#register">Registra't</a></li>
-          <li><a href="#partners">Colaboracions</a></li> -->
         </ul>
       </nav>
     </aside>
@@ -74,7 +71,6 @@
             <div class="carousel-images"></div>
             <button class="carousel-button prev">&lt;</button>
             <button class="carousel-button next">&gt;</button>
-            <!--<script src="js/carousel.js"></script>-->
           </div>
       </section>
 
@@ -171,13 +167,10 @@
             <div class="day">1</div>
             <div class="day">2</div>
             <div class="day">3</div>
-            <!-- Omple la resta dels dies -->
           </div>
-          <!--<script src="js/calendar.js"></script>-->
         </div>
       </section>
 
-      <!-- Sustainable Goals Section -->
       <section id="normative">
         <div class="sustainable-goals">
         <h2>Normativa</h2>
@@ -222,19 +215,11 @@
             <img src="images/LogoAESS.svg" alt="Logo AESS Estudiants">
           </div>
         </div>
-        <!-- <div class="image-container">
-          <img src="images/logo-upc.svg" alt="Imatge 1" height="5px">
-          <img src="images/upc-i-telecos.png" alt="Imatge 2" height="5%">
-          <img src="images/LogoAESS.svg" alt="Imatge 3" height="5%">
-        </div> -->
       </section>
-
-    <!-- Botón de WhatsApp flotante -->
-    <!-- <a href="https://wa.me/1234567890" class="whatsapp-icon" target="_blank">
-      <i class="fab fa-whatsapp"></i>
-    </a> -->
+    </main>
 
     <footer id="footer">
+      <div>
       <div class="container">
         <section class="footer-main">
           <div class="footer-sections">
@@ -302,9 +287,10 @@
             <li><a href="mailto:aess.estudiants@upc.edu" class="social-icon" aria-label="Mail"><i class="fa fa-envelope"></i></a></li>
           </ul>
     
-          <p>&copy; 2025 AESS Estudiants. All images come from <!--<a href="https://www.freepik.com/" class="underline" target="_blank"> -->AESS Estudiants</a> with a <abbr title="Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International">CC BY-NC-ND</abbr> license</p>
+          <p>&copy; 2025 AESS Estudiants. All images come from AESS Estudiants with a <abbr title="Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International">CC BY-NC-ND</abbr> license</p>
         </div>
       </div>
+    </div>
     </footer>
 
 
