--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header class="home-header">
     <nav class="navbar">
       <ul>
-        <li><a href="#" class="active">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="faqs.html">FAQs</a></li>
         <li><a href="contact.html">Contacte</a></li>
       </ul>
@@ -254,6 +254,7 @@
     </div>
   </main>
 
+  <!-- Footer -->
   <footer id="footer">
     <section class="footer-main">
       <div class="footer-sections">
