fix: rest of layout updated

--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
         </div>
         <div>
           <table>
-            <caption class="table-header">Informació de les activitats</caption>
+            <caption class="table-header">
+              Informació de les activitats
+            </caption>
             <thead>
               <tr>
                 <th scope="col">Taller</th>
