feat: New poster design

--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,11 @@
     <section class="hero-section">
       <div class="hero">
         <!-- Logo de l'associació afegit per sobre del títol -->
-        <div class="hero-section">
-          <img src="images/LogoAESS.svg" alt="Logo AESS Estudiants" class="hero-logo">
+        <div class="hero-content">
           <h1>Contacte</h1>
-          <p>Tenim ganes de saber de tu!</p>
+          <div class="frame">
+            <h3>Tenim ganes de saber de tu!</h3>
+          </div>
         </div>
       </div>
     </section>
