--- a/faqs.html
+++ b/faqs.html
@@ -35,10 +35,11 @@
     <section class="hero-section">
       <div class="hero">
         <!-- Logo de l'associació afegit per sobre del títol -->
-        <div class="hero-section">
-          <img src="images/LogoAESS.svg" alt="Logo AESS Estudiants" class="hero-logo">
-          <h1>FAQs</h1>
-          <p>Resolem les teves preguntes</p>
+          <div class="hero-content">
+            <h1>FAQs</h1>
+            <div class="frame">
+              <h3>Resolem les teves preguntes</h3>
+            </div>
         </div>
       </div>
     </section>
